--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,8 @@
 
   <title>CoffeeMondo</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://pay.google.com/gp/p/js/pay.js"></script>
+
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
@@ -49,4 +51,5 @@
 <script id="versionInfo">const appName = 'CoffeeMondo';
 const buildNumber = '1';
 const version = '1.0.0';</script>
+
 </body></html>
